// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todos GraphQL Query & Mutation 1`] = `"removeUser"`;

exports[`Todos GraphQL Query & Mutation 2`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "1",
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 3`] = `"addUser"`;

exports[`Todos GraphQL Query & Mutation 4`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "2",
      "id": "VXNlcjoyNg==",
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 5`] = `"addTodo 1"`;

exports[`Todos GraphQL Query & Mutation 6`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "3 0",
      "todoEdge": Object {
        "cursor": "ODQ=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo4NA==",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 7`] = `"addTodo 2"`;

exports[`Todos GraphQL Query & Mutation 8`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "3 1",
      "todoEdge": Object {
        "cursor": "ODU=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo4NQ==",
          "text": "Get A Customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 9`] = `"addTodo 3"`;

exports[`Todos GraphQL Query & Mutation 10`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "3 2",
      "todoEdge": Object {
        "cursor": "ODY=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo4Ng==",
          "text": "Get A Customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 11`] = `"queryUser"`;

exports[`Todos GraphQL Query & Mutation 12`] = `
Object {
  "data": Object {
    "user": Object {
      "completedCount": 0,
      "email": "user@test.com",
      "id": "VXNlcjoyNg==",
      "todos": Object {
        "edges": null,
        "pageInfo": Object {
          "endCursor": null,
          "hasNextPage": true,
        },
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 13`] = `"markAllTodos"`;

exports[`Todos GraphQL Query & Mutation 14`] = `
Object {
  "data": Object {
    "markAllTodos": Object {
      "changedTodos": Array [
        Object {
          "complete": true,
          "id": "VG9kbzo4NA==",
          "text": "Get A Customer 1",
        },
        Object {
          "complete": true,
          "id": "VG9kbzo4NQ==",
          "text": "Get A Customer 2",
        },
        Object {
          "complete": true,
          "id": "VG9kbzo4Ng==",
          "text": "Get A Customer 3",
        },
      ],
      "clientMutationId": "4",
      "user": Object {
        "completedCount": 3,
        "id": "VXNlcjoyNg==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 15`] = `"changeTodoStatus 0"`;

exports[`Todos GraphQL Query & Mutation 16`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "5 0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo4NA==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user@test.com",
        "id": "VXNlcjoyNg==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 17`] = `"changeTodoStatus 1"`;

exports[`Todos GraphQL Query & Mutation 18`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "5 1",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo4NQ==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user@test.com",
        "id": "VXNlcjoyNg==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 19`] = `"changeTodoStatus 2"`;

exports[`Todos GraphQL Query & Mutation 20`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "5 2",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo4Ng==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "id": "VXNlcjoyNg==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 21`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "6 0",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzo4NA==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user@test.com",
        "id": "VXNlcjoyNg==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 22`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "6 1",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzo4NQ==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user@test.com",
        "id": "VXNlcjoyNg==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 23`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "6 2",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzo4Ng==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 3,
        "email": "user@test.com",
        "id": "VXNlcjoyNg==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 24`] = `
Object {
  "data": Object {
    "clearCompletedTodos": Object {
      "clientMutationId": "7",
      "deletedTodoIds": Array [
        "VG9kbzo4NA==",
        "VG9kbzo4NQ==",
        "VG9kbzo4Ng==",
      ],
      "user": Object {
        "completedCount": 0,
        "id": "VXNlcjoyNg==",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 25`] = `
Object {
  "data": Object {
    "renameTodo": Object {
      "clientMutationId": "9 0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo4NA==",
        "text": "",
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 26`] = `
Object {
  "data": Object {
    "renameTodo": Object {
      "clientMutationId": "9 1",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo4NQ==",
        "text": "",
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 27`] = `
Object {
  "data": Object {
    "renameTodo": Object {
      "clientMutationId": "9 2",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo4Ng==",
        "text": "",
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 28`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`Todos GraphQL Query & Mutation 29`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`Todos GraphQL Query & Mutation 30`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;
